add html from email

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,28 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  Hello
+  <div class="wrapper">
+    <div class="title">Welcome to Kepler 452b</div>
+    <div class="byline">Your skill sharing platform</div>
+    <form action="TODO: URL">
+      <div>
+        <label for="id">Kepler ID</label>
+        <input type="text" name="id"></input>
+      </div>
+      <div>
+        <label for="email">Email</label>
+        <input type="text" name="email"></input>
+      </div>
+      <div>
+        <label for="skills">Skills</label>
+        <input class="skills" type="text" name="skills"></input>
+      </div>
+      <div>
+        <label for="picture">Profile picture</label>
+        <span>TODO: icon</span>
+      </div>
+      <input class="submit" type="submit" value="CONTINUE">
+    </form>
+  </div>
 </body>
 </html>
