--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,19 +12,19 @@
     <div class="title">Welcome to Kepler 452b</div>
     <div class="byline">Your skill sharing platform</div>
     <form action="TODO: URL">
-      <div>
+      <div class="row">
         <label for="id">Kepler ID</label>
         <input type="text" name="id"></input>
       </div>
-      <div>
+      <div class="row">
         <label for="email">Email</label>
         <input type="text" name="email"></input>
       </div>
-      <div>
+      <div class="row">
         <label for="skills">Skills</label>
         <input class="skills" type="text" name="skills"></input>
       </div>
-      <div>
+      <div class="row">
         <label for="picture">Profile picture</label>
         <span>TODO: icon</span>
       </div>
