color text inputs, separate button styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
         <label for="picture">Profile picture</label>
         <span>TODO: icon</span>
       </div>
-      <input class="submit" type="submit" value="CONTINUE">
+      <button class="submit" type="submit">Continue</button>
     </form>
   </div>
 </body>
