disable resize of textarea

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="row">
         <label for="skills">Skills</label>
-        <textarea class="skills" type="textarea" name="skills"></textarea>
+        <textarea class="skills" name="skills"></textarea>
       </div>
       <div class="row">
         <label for="picture">Profile picture</label>
