autofocus first input

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <form action="TODO: URL">
       <div class="row">
         <label for="id">Kepler ID</label>
-        <input type="text" name="id"></input>
+        <input type="text" name="id" autofocus></input>
       </div>
       <div class="row">
         <label for="email">Email</label>
