--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>kepler452b</title>
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="fonts.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="../staticfiles/fonts.css">
+  <link rel="stylesheet" type="text/css" href="../staticfiles/styles.css">
 </head>
 <body>
   <div class="wrapper">
