--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="row">
         <label for="picture">Profile picture</label>
-        <span>TODO: icon</span>
+        <i class="fas fa-upload"></i>
       </div>
       <button class="submit" type="submit">Continue</button>
     </form>
