--- a/frontend/skills.html
+++ b/frontend/skills.html
@@ -12,6 +12,7 @@
     <div class="left-col">
     </div>
     <div class="right-col">
+      <div class="title">Explore active services</div>
     </div>
   </div>
 </body>
