--- a/frontend/skills.html
+++ b/frontend/skills.html
@@ -13,6 +13,9 @@
     </div>
     <div class="right-col">
       <div class="title">Explore active services</div>
+      <div class="search">
+        <i class="fas fa-search"></i>
+      </div>
     </div>
   </div>
 </body>
