--- a/frontend/skills.html
+++ b/frontend/skills.html
@@ -16,6 +16,8 @@
       <div class="search">
         <i class="fas fa-search"></i>
       </div>
+      <div class="results">
+      </div>
     </div>
   </div>
 </body>
