add skill results

--- a/frontend/skills.html
+++ b/frontend/skills.html
@@ -16,7 +16,63 @@
       <div class="search">
         <i class="fas fa-search"></i>
       </div>
-      <div class="results">
+      <div class="results-container">
+        <ul class="results">
+          <li class="result-item">
+            <div>
+              <span class="name">Manuel</span> |
+              <span class="kepler-id">KB556</span>
+            </div>
+            <div class="personal-skills">
+              Dog walker, life teacher
+            </div>
+          </li>
+          <li class="result-item">
+            <div>
+              <span class="name">Ria</span> |
+              <span class="kepler-id">KB556</span>
+            </div>
+            <div class="personal-skills">
+              Painter, hitwoman
+            </div>
+          </li>
+          <li class="result-item">
+            <div>
+              <span class="name">Pia</span> |
+              <span class="kepler-id">KB556</span>
+            </div>
+            <div class="personal-skills">
+              Life refresher, life extender
+            </div>
+          </li>
+          <li class="result-item">
+            <div>
+              <span class="name">Manuel</span> |
+              <span class="kepler-id">KB556</span>
+            </div>
+            <div class="personal-skills">
+              German teacher, DJ
+            </div>
+          </li>
+          <li class="result-item">
+            <div>
+              <span class="name">Ria</span> |
+              <span class="kepler-id">KB556</span>
+            </div>
+            <div class="personal-skills">
+              Dog walker, life teacher
+            </div>
+          </li>
+          <li class="result-item">
+            <div>
+              <span class="name">Pia</span> |
+              <span class="kepler-id">KB556</span>
+            </div>
+            <div class="personal-skills">
+              Policewoman, drug dealer
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
