add user avatar

--- a/frontend/skills.html
+++ b/frontend/skills.html
@@ -10,6 +10,18 @@
 <body>
   <div class="grid-container">
     <div class="left-col">
+      <div class="user-container">
+        <img class="avatar" src="https://avatars2.githubusercontent.com/u/4692673?s=460&v=4"></img>
+        <div class="user-details">
+          <div class="user-name">
+            Shaban (KB452)
+          </div>
+          <div class="user-email">
+            shaban@kepler452b.com
+          </div>
+        </div>
+
+      </div>
     </div>
     <div class="right-col">
       <div class="title">Explore active services</div>
