--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
   <div class="wrapper">
     <div class="title">Welcome to Kepler 452b</div>
     <div class="byline">Your skill sharing platform</div>
-    <form action="TODO: URL">
+    <form class="registration" action="TODO: URL">
       <div class="row">
         <label for="id">Kepler ID</label>
         <input type="text" name="id" autofocus></input>
