add send tokens button

--- a/frontend/user.html
+++ b/frontend/user.html
@@ -41,6 +41,7 @@
       <form class="token-send" action="TODO: URL">
         <label for="tokens">Number of tokens to send to Ria.</label>
         <input type="text" name="tokens" autofocus></input>
+        <button class="submit" type="submit">Send Tokens</button>
       </form>
 
     </div>
